<resources>
    <string name="app_name" translatable="false">ServerCommander</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="loginButtonLabel">SAVE CONNECTION</string>
    <string name="ServerUrlLabel">ServerUrl</string>
    <string name="UsernameLabel">Username</string>
    <string name="PasswordLabel">Password</string>
    <string name="yunohost" translatable="false">YunoHost</string>
    <string name="select_system_type">Select system type</string>
    <string name="public_key">Public Key Location</string>
    <string name="docker" translatable="false">Docker</string>
    <string name="generate">GENERATE RSA KEY PAIR</string>
    <string name="applogo">appLogo</string>
    <string name="clear_settings">CLEAR APP SETTINGS</string>
    <string name="serverUrlError">Must be a valid server address</string>
    <string name="usernameError">Username can contains only letters and numbers</string>
    <string name="pubkeyError">Pubkey cannot be empty</string>
    <string name="correctErrorToast">Please correct all the errors.</string>
    <string name="connectionSaved">Connection details saved.</string>
    <string name="yhAdminUserError">YunoHost needs \'admin\' user</string>
    <string name="externalStorageWriteError">Application is not able to write data to external storage</string>
    <string name="newRsaKeysGenerated">New RSA keys have been generated</string>
    <string name="newRsaKeysNotGenerated">New keys have not been generated</string>
    <string name="overwriteButtonLabel">Overwrite</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="cautionLabel">CAUTION</string>
    <string name="overwriteMessage">You are about to overwrite previously generated keys! Are you sure you want to do this?</string>
    <string name="pubkeyComment" translatable="false">user@ServerCommander</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appName" translatable="false">ServerCommander</string>
    <string name="quick_overview">Quick Overview</string>
    <string name="temp">Temp</string>
    <string name="overiewTemp">43 C</string>
    <string name="dashboard">Dashboard</string>
    <string name="update">UPDATE</string>
    <string name="server_address_label">Server Address</string>
    <string name="username_updated">Username updated</string>
    <string name="username" translatable="false">username</string>
    <string name="server_addres_updated">Server address updated</string>
    <string name="server_url" translatable="false">serverUrl</string>
    <string name="pubkey" translatable="false">pubkey</string>
    <string name="not_available">Not available</string>
    <string name="send">SEND</string>
    <string name="command">Command</string>
    <string name="terminalOutputLabel">terminalOutputLabel</string>
    <string name="read_pubkey">READ PUBKEY</string>
    <string name="no_pubkey_found">No pubkey available. You can generate one now.</string>
    <string name="pubkey_read_error">App is not able to read file location</string>
    <string name="nothingString" translatable="false">---</string>
    <string name="connectionTested" translatable="false">connectionTested</string>
    <string name="refresh_interval_label">Refresh Interval</string>
    <string name="refresh_interval_slider">refresh interval slider</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="packages">Packages</string>
    <string name="number_of_system_packages">Number of packages</string>
    <string name="read_error">Read error</string>
    <string name="uptime">Uptime</string>
    <string name="reboot">REBOOT</string>
    <string name="save">SAVE</string>
    <string name="sudo_password">SUDO Password</string>
    <string name="run">RUN</string>
    <string name="upgrade">UPGRADE</string>
    <string name="please_enter_sudo_password">Please enter SUDO password</string>
    <string name="available_updates">Available updates</string>
    <string name="connection_test">connection test</string>
    <string name="refresh">refresh</string>
    <string name="running_containers">Running Containers</string>
    <string name="stopped_ctr">Stopped CTR</string>
    <string name="docker_dashboard">Docker Dashboard</string>
    <string name="running_ctr">Running CTR</string>
    <string name="containers_status">Containers Status</string>
    <string name="all_ctr">All CTR</string>
    <string name="container_restart">Container restart</string>
    <string name="container_down">Container down</string>
    <string name="container_start">Container start</string>
    <string name="yunohost_dashboard">YunoHost Dashboard</string>
    <string name="go_to_sso">Go to SSO</string>
    <string name="refreshing">Refreshing…</string>
    <string name="container">Container</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="disk_reads_writes">Disk read / write</string>
    <string name="network_up_down">Network up / down</string>
    <string name="commands">Commands</string>
    <string name="yunohost_password">Yunohost password</string>
    <string name="shutdown">SHUTDOWN</string>
    <string name="home">HOME</string>
    <string name="system">SYSTEM</string>
    <string name="apps">APPS</string>
    <string name="terminal">TERMINAL</string>
    <string name="settings">SETTINGS</string>
    <string name="created_backups">Created Backups</string>
    <string name="ssh_connection_port">SSH Connection PORT</string>
    <string name="push_new_ssh_key">Push new SSH Key!</string>
    <string name="enter_username">Enter username</string>
    <string name="ssh">SSH</string>
</resources>