<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dockerAppItem"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.doyouhost.servercommander.fragments.DockerFragment">



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/dockerAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/nothingString"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/buttonContainerStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/dockerAppStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/nothingString"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dockerAppName" />

        <TextView
            android:id="@+id/dockerAppRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/nothingString"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dockerAppStatus"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonContainerStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:backgroundTint="@color/runningGreen"
            android:src="@drawable/play_circle"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonContainerDown"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/white"
            android:padding="@dimen/_12sdp"
            android:contentDescription="@string/container_start"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonContainerDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonContainerRestart"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:src="@drawable/stop_circle"
            android:backgroundTint="@color/buttonRed"
            android:tint="@color/white"
            android:padding="@dimen/_12sdp"
            android:contentDescription="@string/container_down"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonContainerRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/dashboard_item_5"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/restart"
            android:tint="@color/white"
            android:padding="@dimen/_12sdp"
            android:contentDescription="@string/container_restart"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>



</LinearLayout >